--- a/src/index.ejs
+++ b/src/index.ejs
@@ -36,7 +36,11 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js"
+        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
+        "@organization/frontend-group2": "https://dev2-spa-mu.vercel.app/main.js",
+        "@organization/clients-view": "https://dev3-spa-nine.vercel.app/main.js",
+        "@organization/project": "https://dev4-spa-gilt.vercel.app/main.js",
+        "@organization/prueba": "https://dev5-spa.vercel.app/main.js"
       }
     }
   </script>
