--- a/src/index.ejs
+++ b/src/index.ejs
@@ -37,6 +37,7 @@
     {
       "imports": {
         "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
+        "@organization/root-config": "https://shell-spa-beta.vercel.app/organization-root-config.js",
         "@organization/frontend-group2": "https://dev2-spa-mu.vercel.app/main.js",
         "@organization/clients-view": "https://dev3-spa-nine.vercel.app/main.js",
         "@organization/project": "https://dev4-spa-gilt.vercel.app/main.js",
