--- a/src/index.ejs
+++ b/src/index.ejs
@@ -41,7 +41,7 @@
         "@organization/frontend-group2": "https://dev2-spa-mu.vercel.app/main.js",
         "@organization/clients-view": "https://dev3-spa-nine.vercel.app/main.js",
         "@organization/project": "https://dev4-spa-gilt.vercel.app/main.js",
-        "@organization/prueba": "https://dev5-spa.vercel.app/main.js"
+        "@organization/prueba": "https://dev5-spa.vercel.app/main.js",
       }
     }
   </script>
