--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 225px;
-    height: 100%;
+    height: 100vh;
     padding: 20px 0;
     transition: all 0.5s ease;
 }
@@ -14,7 +14,7 @@
     margin: 0;
     padding: 0;
     position: relative;
-    height: 100%;
+    height: 100vh;
 }
 
 .sidebar ul li a {
